--- a/StarWarsProject/index.html
+++ b/StarWarsProject/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Star Wars Test</title>
-    
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app">
     </div>
+    <div id="result"></div>
 </body>
 <script src="index.js"></script>
 <script src="questions.js"></script>
